# PharmaGuard

./: .gitignore  README.md
Backend/: .env.example  package-lock.json  package.json
Backend/src/: server.ts
Backend/src/controllers/: analyze.controller.ts  email.controller.ts  whatsapp.controller.ts
Backend/src/map_data/: phenotypeMap.ts
Backend/src/routes/: analyze.route.ts  email.route.ts  whatsapp.route.ts
Backend/src/services/: diplotype.service.ts  gemini.service.ts  phenotype.service.ts  riskEngine.service.ts  vcfParser.service.ts
Backend/src/types/: drug.types.ts  session.d.ts  variant.types.ts
Backend/uploads/: 1771532013435-570442868-sample_patient_001.vcf
Frontend/: electron-builder.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
Frontend/src/electron/: main.ts  tsconfig.json
Frontend/src/ui/: App.tsx  index.css
Frontend/src/ui/components/: DiseaseSelector.tsx  FileUploader.tsx
Frontend/src/ui/components/ui/: checkbox.tsx  progress.tsx
Frontend/src/ui/context/: FileContext.tsx
Frontend/src/ui/lib/: values.ts
Frontend/src/ui/pages/: Inventory.tsx  NotFound.tsx  Results.tsx  UploadData.tsx  VCFViewer.tsx
RAG/: .gitignore  pyproject.toml
RAG/rag/: api.py  check_db.py  external_services.py  ingest.py  llm_layer.py  main.py  retrieve_test.py
